fix: spacing of oembeds

--- a/wordpress/wp-content/themes/les-verts/styleguide/src/components/atoms/a-oembed/_a-oembed.scss
+++ b/wordpress/wp-content/themes/les-verts/styleguide/src/components/atoms/a-oembed/_a-oembed.scss
@@ -1,4 +1,7 @@
 .a-oembed {
+	margin-top: 1.5em;
+	margin-bottom: 1.5em;
+
 	&--youtube,
 	&--vimeo {
 		position: relative;
